--- a/movies.html
+++ b/movies.html
@@ -14,7 +14,7 @@
 	<div class="block">
 	<h1><b>Harry Potter</b></h1>
 	<a href="http://www.imdb.com/title/tt0241527/">
-		<img src="99.PNG"></a>
+		<img src="99.jpg"></a>
 	<h2>Working Group</h2>
 	<p>KRIS KOLUMB</p>
 	<P>STIV KLOVES</P>
